--- a/framework/content/user/assets/css/slingbar.css
+++ b/framework/content/user/assets/css/slingbar.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+	visibility: hidden; /* Prevent flicker on load, javascript will make visible when ready */
 }
 .slingbar .yui3-menu {
 	visibility: hidden; /* Prevent flicker on load, javascript will make visible when ready */
